# mental-health-llm-eval

./: .gitignore  LICENSE  README.md  _config.yml  evaluate.py  frontier_audit_pipeline.py  inspect_task.py  irr.py  prompts.json  pyproject.toml  rubrics.py  rubrics_v2.py
docs/: findings.md  frontier-audit-launch.md  postmortem-irr-target-dependence.md  postmortem-irr.md  postmortem-meditron.md  postmortem-rubrics-v2-failed.md  postmortem-scale-vs-finetune.md  viral-post.md
reports/: 20260522T192314Z.md  20260522T193403Z.md  20260522T203456Z.md  20260522T205929Z_irr.md  20260522T215441Z_irr.md  20260522T233235Z_irr.md  example_report.md
